2001-01-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k17

	* ntpd/refclock_local.c (STRATUM): 3 -> 5
	* ntpd/ntp_proto.c: sys_maxd -> sys_selerr, sys_epsil ->
	sys_syserr.  various cleanups and improvements.
	From: Dave Mills.

2001-01-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k16

	* config.h.in: Regenerated - became empty somehow.
	Reported by John.Hay@icomtek.csir.co.za

	* ntpd/ntp_proto.c (clock_select): Fix sdisp calculation.
	From Dave Mills.

	* util/ntp-genkeys.c:
	* ntpd/refclock_chu.c:
	* ntpd/refclock_atom.c:
	* ntpd/ntpd.c:
	* ntpd/ntp_loopfilter.c:
	* ntpd/ntp_io.c:
	* ntpd/cmd_args.c:
	* libntp/audio.c:
	* include/l_stdlib.h:
	* html/copyright.htm:
	Lint fixes (Thanks bunches!)
	From: Marc.Brett@westerngeco.com

2001-01-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k15

	* ntpd/ntp_proto.c (clock_select): Track error[] items sooner.
	Typo grabbing the dtemp value and in the sdisp calculation.
	From Dave Mills.

2001-01-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k14

	* ntpd/ntp_proto.c: Change description of sys_rootdelay and
	sys_rootdispersion. 
	(process_packet): Fix p_del test (bad distance).
	(process_packet): Fix bad synch distance test.
	(process_packet): Fix call to clock_filter (p_disp)
	(clock_update): Fix sys_rootdelay calculation.
	(clock_filter): Initialize jit to f(sys_precision)
	(clock_filter): Update jit using distance[i] instead of
	SQUARE().  peer->jitter uses dtemp instead of SQUARE().
	(clock_filter): Updated CLOCK_SGATE checks.  When printing debug
	info, show jitter along with popcorn spike.
	(clock_select): New sdisp calc.
	(root_distance): New return value calc.
	(peer_xmit): xpkt.rootdispersion value change.
	* include/ntp.h (CLOCK_SGATE): Popcorn spike gate (Whoa, Molly!)
	From Dave Mills.

2001-01-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* config.sub (Repository): Updated.
	* config.guess (Repository): Updated.
